# rest/get_cart.go
@@ -2,7 +2,7 @@ package rest
 
 import (
 	"github.com/gin-gonic/gin"
-	"github.com/nmarsollier/cartgo/rest/engine"
+	"github.com/nmarsollier/cartgo/rest/server"
 	"github.com/nmarsollier/cartgo/security"
 	"github.com/nmarsollier/cartgo/service"
 )
@@ -15,16 +15,16 @@ import (
 //	@Param			Authorization	header		string				true	"bearer {token}"
 //	@Success		200				{object}	cart.Cart			"Cart"
 //	@Failure		400				{object}	errs.ValidationErr	"Bad Request"
-//	@Failure		401				{object}	engine.ErrorData	"Unauthorized"
-//	@Failure		404				{object}	engine.ErrorData	"Not Found"
-//	@Failure		500				{object}	engine.ErrorData	"Internal Server Error"
+//	@Failure		401				{object}	server.ErrorData	"Unauthorized"
+//	@Failure		404				{object}	server.ErrorData	"Not Found"
+//	@Failure		500				{object}	server.ErrorData	"Internal Server Error"
 //	@Router			/v1/cart [get]
 //
 // Obtiene el carrito actual del usuario.
 func initGetCart() {
-	engine.Router().GET(
+	server.Router().GET(
 		"/v1/cart",
-		engine.ValidateAuthentication,
+		server.ValidateAuthentication,
 		currentCart,
 	)
 }
@@ -32,11 +32,11 @@ func initGetCart() {
 func currentCart(c *gin.Context) {
 	user := c.MustGet("user").(security.User)
 
-	ctx := engine.TestCtx(c)
+	ctx := server.TestCtx(c)
 	cart, err := service.GetCurrentCart(user.ID, ctx...)
 
 	if err != nil {
-		engine.AbortWithError(c, err)
+		server.AbortWithError(c, err)
 		return
 	}
 
