# rest/get_cart_validate.go
@@ -3,7 +3,7 @@ package rest
 import (
 	"github.com/gin-gonic/gin"
 	"github.com/nmarsollier/cartgo/cart"
-	"github.com/nmarsollier/cartgo/rest/engine"
+	"github.com/nmarsollier/cartgo/rest/server"
 	"github.com/nmarsollier/cartgo/security"
 	"github.com/nmarsollier/cartgo/service"
 )
@@ -16,16 +16,16 @@ import (
 //	@Param			Authorization	header	string	true	"bearer {token}"
 //	@Success		200				"No Content"
 //	@Failure		400				{object}	errs.ValidationErr	"Bad Request"
-//	@Failure		401				{object}	engine.ErrorData	"Unauthorized"
-//	@Failure		404				{object}	engine.ErrorData	"Not Found"
-//	@Failure		500				{object}	engine.ErrorData	"Internal Server Error"
+//	@Failure		401				{object}	server.ErrorData	"Unauthorized"
+//	@Failure		404				{object}	server.ErrorData	"Not Found"
+//	@Failure		500				{object}	server.ErrorData	"Internal Server Error"
 //	@Router			/v1/cart/validate [get]
 //
 // Valida el carrito para checkout.
 func initGetCartValidate() {
-	engine.Router().GET(
+	server.Router().GET(
 		"/v1/cart/validate",
-		engine.ValidateAuthentication,
+		server.ValidateAuthentication,
 		validate,
 	)
 }
@@ -34,16 +34,16 @@ func validate(c *gin.Context) {
 	user := c.MustGet("user").(security.User)
 	token := c.MustGet("tokenString").(string)
 
-	ctx := engine.TestCtx(c)
+	ctx := server.TestCtx(c)
 	currentCart, err := cart.CurrentCart(user.ID, ctx...)
 	if err != nil {
-		engine.AbortWithError(c, err)
+		server.AbortWithError(c, err)
 		return
 	}
 
 	err = service.ValidateCheckout(currentCart, token, ctx...)
 	if err != nil {
-		engine.AbortWithError(c, err)
+		server.AbortWithError(c, err)
 		return
 	}
 
